added two new AI's