@@ -9,7 +9,6 @@ import java.lang.classfile.ClassModel;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
 import java.util.Optional;
 import java.util.TreeMap;
@@ -57,25 +56,31 @@ public class TestRunaAllTests {
         long time;
     }
     @Test
-    void runSample1Count() throws IOException {
+    void ArunSample1Count() throws IOException {
 
         runTestGroup(SAMPLE,"sample", 1);
 
     }
     @Test
-    void runSample1KCount() throws IOException {
+    void BrunSample1KCount() throws IOException {
 
         runTestGroup(SAMPLE,"sample", 1000);
 
     }
-    @Test
-    void runSample1MCount() throws IOException {
 
-        runTestGroup(SAMPLE,"sample", 1000000);
+    @Test
+    void CrunSample100KCount() throws IOException {
+
+        runTestGroup(SAMPLE,"sample", 100000);
 
     }
 
+    @Test
+    void DrunBRC1Count() throws IOException {
 
+        runTestGroup(BRC_MEASUREMENTS_TXT,"brc", 1);
+
+    }
     private void runTestGroup(String testFile, String desc,int count) throws IOException {
 
         File dir=new File("target");
@@ -130,21 +135,19 @@ public class TestRunaAllTests {
         LocalClassInstantiator lc=null;
         File output=new File(dir,project+"_results.txt");
 
-
-
         try
         {
 
 
             long startTime = System.nanoTime();
-            boolean r= runProcess(output,project,clp,mainName,testFile,count);
+           TestResult r= runProcess(output,project,clp,mainName,testFile,count);
             long durationNanos   = System.nanoTime()-startTime;
             long millis = durationNanos / 1_000_000;
             double fmillis=(double)(durationNanos)/((double)count*1e6);
             double fmills_count=fmillis/(double)count;
 
-            reporter.printf("%s,%d,%d,%f,%b\n",project,count,millis,fmillis,r);
-            System.out.printf("    %s,%d,%d,%f,%b\n",project,count,millis,fmillis,r);
+            reporter.printf("%s,%d,%d,%f,%s\n",project,count,millis,fmillis,r.name());
+            System.out.printf("    %s,%d,%d,%f,%s\n",project,count,millis,fmillis,r.name());
 
         } catch (Exception e) {
             e.printStackTrace();
@@ -155,7 +158,7 @@ public class TestRunaAllTests {
 
     }
 
-    private boolean runProcess(File outputFile,String project,String cp, String main,String testfile,int count)  {
+    private TestResult runProcess(File outputFile, String project, String cp, String main, String testfile, int count)  {
         File target=new File("target");
         File testclasses=new File(target,"test-classes");
         String classpath=testclasses.getAbsolutePath()+java.io.File.pathSeparator+cp;
@@ -163,9 +166,9 @@ public class TestRunaAllTests {
         ProcessBuilder processBuilder = new ProcessBuilder();
 
         if (System.getProperty("os.name").toLowerCase().contains("windows")) {
-            processBuilder.command("java.exe", "-cp",classpath,"dev.gruff.billion_records.TestRunner",cp,main,testfile,""+count);
+            processBuilder.command("java.exe", "-cp",classpath,"--enable-preview","dev.gruff.billion_records.TestRunner",cp,main,testfile,""+count);
         } else {
-            processBuilder.command("java", "-cp", classpath,"dev.gruff.billion_records.TestRunner",cp,main,testfile,""+count);
+            processBuilder.command("java", "-cp", classpath,"--enable-preview","dev.gruff.billion_records.TestRunner",cp,main,testfile,""+count);
         }
 
         // Setting the output file for redirection
@@ -178,7 +181,8 @@ public class TestRunaAllTests {
         int exitCode = 0;
 
             exitCode = process.waitFor();
-            return exitCode == 0;
+            exitCode = process.exitValue();
+            return TestResult.result(exitCode);
 
         } catch (InterruptedException e) {
             throw new RuntimeException(e);
